--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -1,136 +1,220 @@
 ---
-import { Image } from "astro:assets";
 import Cobe from "@components/cobe.astro";
-import Link from "@components/ui/link.astro";
-import abstractDottedGlobeIllustration from "assets/abstract-dotted-globe-illustration.png";
-import { t } from "i18next";
-
-const { dynamic = false } = Astro.props;
 ---
 
 <div class="relative isolate pt-14 dark:bg-stone-950">
-	<div class="absolute inset-x-0 -top-40 -z-10 transform-gpu overflow-hidden blur-3xl sm:-top-80">
-		<svg
-			class="relative left-[calc(50%-11rem)] -z-10 h-[21.1875rem] max-w-none -translate-x-1/2 rotate-[30deg] sm:left-[calc(50%-30rem)] sm:h-[42.375rem] animate-slide"
-			viewBox="0 0 1155 678">
-			<path
-				fill="url(#9b2541ea-d39d-499b-bd42-aeea3e93f5ff)"
-				fill-opacity=".3"
-				d="M317.219 518.975L203.852 678 0 438.341l317.219 80.634 204.172-286.402c1.307 132.337 45.083 346.658 209.733 145.248C936.936 126.058 882.053-94.234 1031.02 41.331c119.18 108.451 130.68 295.337 121.53 375.223L855 299l21.173 362.054-558.954-142.079z">
-			</path>
-			<defs>
-				<linearGradient
-					id="9b2541ea-d39d-499b-bd42-aeea3e93f5ff"
-					x1="1155.49"
-					x2="-78.208"
-					y1=".177"
-					y2="474.645"
-					gradientUnits="userSpaceOnUse">
-					<stop stop-color="#9089FC"></stop>
-					<stop offset="1" stop-color="#FFD580"></stop>
-				</linearGradient>
-			</defs>
-		</svg>
-	</div>
-	<div class="sm:pt-10">
-		<div class="mx-auto max-w-7xl">
-			<div class="mx-auto max-w-2xl text-center">
-				<h1 class="text-4xl font-bold tracking-tight text-black dark:text-white sm:text-6xl">{t("hero.title")}</h1>
-				<p class="mt-6 text-lg leading-8 text-gray-900 dark:text-gray-100">
-					{t("hero.subtitle")}
-				</p>
-				<div class="mt-10 flex items-center justify-center gap-x-2 md:gap-x-6">
-					<Link href="https://github.com/zankhq/astros">{t("hero.main_button_text")}</Link>
-					{
-						dynamic ? (
-							<Link href="/" style="muted">
-								{t("hero_animated.secondary_button_text")}
-								<span aria-hidden="true" class="pl-1 text-black dark:text-white">
-									→
-								</span>
-							</Link>
-						) : (
-							<Link href="/animated" style="muted">
-								{t("hero.secondary_button_text")}
-								<span aria-hidden="true" class="pl-1 text-black dark:text-white">
-									→
-								</span>
-							</Link>
-						)
-					}
-				</div>
-			</div>
-			<div class="flex justify-center items-center mt-4 md:mt-8">
-				{
-					dynamic ? (
-						<>
-							<h2
-								class="text-2xl md:text-4xl max-w-2xl text-center font-bold tracking-tight text-black dark:text-white absolute"
-								style="line-height: 1.5">
-								{t("hero.globe_title")}
-							</h2>
-							<Cobe />
-						</>
-					) : (
-						<Image
-							class="inline-block mt-12 md:mt-20"
-							src={abstractDottedGlobeIllustration}
-							alt="Astros"
-							width={600}
-							height={600}
-							loading="eager"
-						/>
-					)
-				}
-			</div>
-		</div>
-	</div>
-	<div class="absolute inset-x-0 top-[calc(100%-13rem)] -z-10 transform-gpu overflow-hidden blur-3xl sm:top-[calc(100%-30rem)]">
-		<svg
-			class="relative left-[calc(50%+3rem)] h-[21.1875rem] max-w-none -translate-x-1/2 sm:left-[calc(50%+36rem)] sm:h-[42.375rem] animate-slide"
-			viewBox="0 0 1155 678">
-			<path
-				fill="url(#b9e4a85f-ccd5-4151-8e84-ab55c66e5aa1)"
-				fill-opacity=".3"
-				d="M317.219 518.975L203.852 678 0 438.341l317.219 80.634 204.172-286.402c1.307 132.337 45.083 346.658 209.733 145.248C936.936 126.058 882.053-94.234 1031.02 41.331c119.18 108.451 130.68 295.337 121.53 375.223L855 299l21.173 362.054-558.954-142.079z">
-			</path>
-			<defs>
-				<linearGradient
-					id="b9e4a85f-ccd5-4151-8e84-ab55c66e5aa1"
-					x1="1155.49"
-					x2="-78.208"
-					y1=".177"
-					y2="474.645"
-					gradientUnits="userSpaceOnUse">
-					<stop stop-color="#9089FC">
-						<animate attributeName="stop-color" values="#9089FC; #FF80B5; #9089FC" dur="5s" repeatCount="indefinite"></animate>
-					</stop>
-					<stop offset="1" stop-color="#ffb6c1">
-						<animate attributeName="stop-color" values="#ffb6c1; #9089FC; #ffb6c1" dur="5s" repeatCount="indefinite"></animate>
-					</stop>
-				</linearGradient>
-			</defs>
-		</svg>
-	</div>
+  <div
+    class="absolute inset-x-0 -top-40 -z-10 transform-gpu overflow-hidden blur-3xl sm:-top-80"
+  >
+    <svg
+      class="relative left-[calc(50%-11rem)] -z-10 h-[21.1875rem] max-w-none -translate-x-1/2 rotate-[30deg] sm:left-[calc(50%-30rem)] sm:h-[42.375rem] animate-slide"
+      viewBox="0 0 1155 678"
+    >
+      <path
+        fill="url(#9b2541ea-d39d-499b-bd42-aeea3e93f5ff)"
+        fill-opacity=".3"
+        d="M317.219 518.975L203.852 678 0 438.341l317.219 80.634 204.172-286.402c1.307 132.337 45.083 346.658 209.733 145.248C936.936 126.058 882.053-94.234 1031.02 41.331c119.18 108.451 130.68 295.337 121.53 375.223L855 299l21.173 362.054-558.954-142.079z"
+      >
+      </path>
+      <defs>
+        <linearGradient
+          id="9b2541ea-d39d-499b-bd42-aeea3e93f5ff"
+          x1="1155.49"
+          x2="-78.208"
+          y1=".177"
+          y2="474.645"
+          gradientUnits="userSpaceOnUse"
+        >
+          <stop stop-color="#9089FC"></stop>
+          <stop offset="1" stop-color="#FFD580"></stop>
+        </linearGradient>
+      </defs>
+    </svg>
+  </div>
+  <div class="sm:pt-10">
+    <div class="mx-auto max-w-7xl">
+      <div class="mx-auto max-w-2xl text-center">
+        <h1
+          class="text-4xl font-bold tracking-tight text-black dark:text-white sm:text-6xl"
+        >
+          {"Circuitos de la temporada 2025"}
+        </h1>
+      </div>
+      <div class="flex justify-center items-center mt-4 md:mt-8">
+        <Cobe />
+				
+      </div>
+    </div>
+  </div>
+  <div
+    class="absolute inset-x-0 top-[calc(100%-13rem)] -z-10 transform-gpu overflow-hidden blur-3xl sm:top-[calc(100%-30rem)]"
+  >
+    <svg
+      class="relative left-[calc(50%+3rem)] h-[21.1875rem] max-w-none -translate-x-1/2 sm:left-[calc(50%+36rem)] sm:h-[42.375rem] animate-slide"
+      viewBox="0 0 1155 678"
+    >
+      <path
+        fill="url(#b9e4a85f-ccd5-4151-8e84-ab55c66e5aa1)"
+        fill-opacity=".3"
+        d="M317.219 518.975L203.852 678 0 438.341l317.219 80.634 204.172-286.402c1.307 132.337 45.083 346.658 209.733 145.248C936.936 126.058 882.053-94.234 1031.02 41.331c119.18 108.451 130.68 295.337 121.53 375.223L855 299l21.173 362.054-558.954-142.079z"
+      >
+      </path>
+      <defs>
+        <linearGradient
+          id="b9e4a85f-ccd5-4151-8e84-ab55c66e5aa1"
+          x1="1155.49"
+          x2="-78.208"
+          y1=".177"
+          y2="474.645"
+          gradientUnits="userSpaceOnUse"
+        >
+          <stop stop-color="#9089FC">
+            <animate
+              attributeName="stop-color"
+              values="#9089FC; #FF80B5; #9089FC"
+              dur="5s"
+              repeatCount="indefinite"></animate>
+          </stop>
+          <stop offset="1" stop-color="#ffb6c1">
+            <animate
+              attributeName="stop-color"
+              values="#ffb6c1; #9089FC; #ffb6c1"
+              dur="5s"
+              repeatCount="indefinite"></animate>
+          </stop>
+        </linearGradient>
+      </defs>
+    </svg>
+  </div>
+	<div class="flex justify-center items-center mt-4 md:mt-8">
+
+	
+	<table class="table-auto border-collapse border  dark:text-slate-400 border-gray-400 mt-8">
+		<thead>
+			<tr>
+				<th class="border border-gray-300 px-4 py-2">Grand Prix</th>
+				<th class="border border-gray-300 px-4 py-2">Circuit</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td class="border border-gray-300 px-4 py-2">GP de Australia</td>
+				<td class="border border-gray-300 px-4 py-2">Albert Park, Melbourne</td>
+			</tr>
+			<tr>
+				<td class="border border-gray-300 px-4 py-2">GP de China</td>
+				<td class="border border-gray-300 px-4 py-2">Shanghái</td>
+			</tr>
+			<tr>
+				<td class="border border-gray-300 px-4 py-2">GP de Japón</td>
+				<td class="border border-gray-300 px-4 py-2">Suzuka</td>
+			</tr>
+			<tr>
+				<td class="border border-gray-300 px-4 py-2">GP de Baréin</td>
+				<td class="border border-gray-300 px-4 py-2">Sakhir</td>
+			</tr>
+			<tr>
+				<td class="border border-gray-300 px-4 py-2">GP de Arabia Saudita</td>
+				<td class="border border-gray-300 px-4 py-2">Yeda</td>
+			</tr>
+			<tr>
+				<td class="border border-gray-300 px-4 py-2">GP de Miami</td>
+				<td class="border border-gray-300 px-4 py-2">Miami Gardens</td>
+			</tr>
+			<tr>
+				<td class="border border-gray-300 px-4 py-2">GP de Emilia-Romaña</td>
+				<td class="border border-gray-300 px-4 py-2">Imola</td>
+			</tr>
+			<tr>
+				<td class="border border-gray-300 px-4 py-2">GP de Mónaco</td>
+				<td class="border border-gray-300 px-4 py-2">Montecarlo</td>
+			</tr>
+			<tr>
+				<td class="border border-gray-300 px-4 py-2">GP de España</td>
+				<td class="border border-gray-300 px-4 py-2">Montmeló</td>
+			</tr>
+			<tr>
+				<td class="border border-gray-300 px-4 py-2">GP de Canadá</td>
+				<td class="border border-gray-300 px-4 py-2">Montreal</td>
+			</tr>
+			<tr>
+				<td class="border border-gray-300 px-4 py-2">GP de Austria</td>
+				<td class="border border-gray-300 px-4 py-2">Spielberg</td>
+			</tr>
+			<tr>
+				<td class="border border-gray-300 px-4 py-2">GP de Gran Bretaña</td>
+				<td class="border border-gray-300 px-4 py-2">Silverstone</td>
+			</tr>
+			<tr>
+				<td class="border border-gray-300 px-4 py-2">GP de Bélgica</td>
+				<td class="border border-gray-300 px-4 py-2">Spa-Francorchamps</td>
+			</tr>
+			<tr>
+				<td class="border border-gray-300 px-4 py-2">GP de Hungría</td>
+				<td class="border border-gray-300 px-4 py-2">Mogyoród</td>
+			</tr>
+			<tr>
+				<td class="border border-gray-300 px-4 py-2">GP de Países Bajos</td>
+				<td class="border border-gray-300 px-4 py-2">Zandvoort</td>
+			</tr>
+			<tr>
+				<td class="border border-gray-300 px-4 py-2">GP de Italia</td>
+				<td class="border border-gray-300 px-4 py-2">Monza</td>
+			</tr>
+			<tr>
+				<td class="border border-gray-300 px-4 py-2">GP de Azerbaiyán</td>
+				<td class="border border-gray-300 px-4 py-2">Bakú</td>
+			</tr>
+			<tr>
+				<td class="border border-gray-300 px-4 py-2">GP de Singapur</td>
+				<td class="border border-gray-300 px-4 py-2">Marina Bay</td>
+			</tr>
+			<tr>
+				<td class="border border-gray-300 px-4 py-2">GP de EE.UU.</td>
+				<td class="border border-gray-300 px-4 py-2">Austin</td>
+			</tr>
+			<tr>
+				<td class="border border-gray-300 px-4 py-2">GP de México</td>
+				<td class="border border-gray-300 px-4 py-2">Ciudad de México</td>
+			</tr>
+			<tr>
+				<td class="border border-gray-300 px-4 py-2">GP de São Paulo</td>
+				<td class="border border-gray-300 px-4 py-2">Interlagos</td>
+			</tr>
+			<tr>
+				<td class="border border-gray-300 px-4 py-2">GP de Las Vegas</td>
+				<td class="border border-gray-300 px-4 py-2">Las Vegas</td>
+			</tr>
+			<tr>
+				<td class="border border-gray-300 px-4 py-2">GP de Catar</td>
+				<td class="border border-gray-300 px-4 py-2">Lusail</td>
+			</tr>
+			<tr>
+				<td class="border border-gray-300 px-4 py-2">GP de Abu Dabi</td>
+				<td class="border border-gray-300 px-4 py-2">Yas Marina</td>
+			</tr>
+		</tbody>
+	</table>
+</div>
 </div>
 
 <style>
-	@keyframes slide {
-		0% {
-			left: calc(50% - 70rem);
-			transform: rotate(0deg);
-		}
-		50% {
-			left: calc(50% - 30rem);
-			transform: rotate(-180deg);
-		}
-		100% {
-			left: calc(50% - 70rem);
-			transform: rotate(0deg);
-		}
-	}
+  @keyframes slide {
+    0% {
+      left: calc(50% - 70rem);
+      transform: rotate(0deg);
+    }
+    50% {
+      left: calc(50% - 30rem);
+      transform: rotate(-180deg);
+    }
+    100% {
+      left: calc(50% - 70rem);
+      transform: rotate(0deg);
+    }
+  }
 
-	.animate-slide {
-		animation: slide 25s infinite;
-	}
+  .animate-slide {
+    animation: slide 25s infinite;
+  }
 </style>
