--- a/src/components/cobe.astro
+++ b/src/components/cobe.astro
@@ -1,8 +1,8 @@
 ---
-const globeMaxSize = 1000;
+const globeMaxSize = 500;
 ---
 
-<canvas id="cobe" width={globeMaxSize} height={globeMaxSize} class="dark:opacity-50"></canvas>
+<canvas id="cobe" width={globeMaxSize} height={globeMaxSize} class="dark:opacity-100"></canvas>
 
 <script define:vars={{ globeMaxSize }} type="module">
 	import createGlobe from "https://cdn.skypack.dev/cobe";
@@ -30,25 +30,48 @@ const globeMaxSize = 1000;
 			height: globeSize,
 			phi: 0,
 			theta: 0,
-			dark: 0,
-			diffuse: 1.2,
+			dark: 1,
+			diffuse: 1.5,
 			scale: 1,
-			mapSamples: 16000,
-			mapBrightness: 5,
-			baseColor: [1, 1, 1],
-			markerColor: [1, 0.5, 1],
-			glowColor: [1, 1, 1],
+			mapSamples: 25000,
+			mapBrightness: 12,
+			baseColor: [0.3, 0.3, 0.3],
+			markerColor: [1, 0.1, 0],
+			glowColor: [1, 0.1, 0],
 			offset: [0, 0],
-			opacity: 0.9,
+			opacity: 0.5,
 			markers: [
-				{ location: [37.7595, -122.4367], size: 0.03 },
-				{ location: [40.7128, -74.006], size: 0.1 },
+				{ location: [-37.8497, 144.9680], size: 0.05 },
+				{ location: [31.3389, 121.2220], size: 0.05 },
+				{ location: [34.8431, 136.5410], size: 0.05 },
+				{ location: [26.0325, 50.5106], size: 0.05 },
+				{ location: [21.6319, 39.1044], size: 0.05 },
+				{ location: [25.9580, -80.2389], size: 0.05 },
+				{ location: [44.3439, 11.7167], size: 0.05 },
+				{ location: [43.7347, 7.4206], size: 0.05 },
+				{ location: [41.5700, 2.2611], size: 0.05 },
+				{ location: [45.5005, -73.5221], size: 0.05 },
+				{ location: [47.2197, 14.7647], size: 0.05 },
+				{ location: [52.0786, -1.0169], size: 0.05 },
+				{ location: [50.4372, 5.9714], size: 0.05 },
+				{ location: [47.5789, 19.2486], size: 0.05 },
+				{ location: [52.3888, 4.5409], size: 0.05 },
+				{ location: [45.6156, 9.2811], size: 0.05 },
+				{ location: [40.3725, 49.8533], size: 0.05 },
+				{ location: [1.2914, 103.8644], size: 0.05 },
+				{ location: [30.1328, -97.6411], size: 0.05 },
+				{ location: [19.4042, -99.0907], size: 0.05 },
+				{ location: [-23.7036, -46.6997], size: 0.05 },
+				{ location: [36.1147, -115.1698], size: 0.05 },
+				{ location: [25.4903, 51.4542], size: 0.05 },
+				{ location: [24.4672, 54.6031], size: 0.05 }
 			],
+			
 			onRender: (state) => {
 				// Called on every animation frame.
 				// `state` will be an empty object, return updated params.
 				state.phi = phi;
-				phi += 0.001;
+				phi += 0.007;
 			},
 		});
 
