--- a/src/components/themeselector.astro
+++ b/src/components/themeselector.astro
@@ -6,7 +6,7 @@ import { Icon } from "astro-icon/components";
 	class="flex items-center pl-2 rounded-md text-sm font-semibold text-center transition focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 border outline-2 outline-offset-2 border-gray-300 text-gray-700 hover:border-gray-400 active:bg-gray-100 dark:active:bg-stone-950"
 	aria-label="Theme selection">
 	<Icon name="fluent:dark-theme-20-filled" class="w-5 dark:text-white" />
-	<label for="theme-selector" class="sr-only">Choose a theme</label>
+	<label for="theme-selector" class="sr-only">Elige el tema</label>
 	<select
 		x-data="{
 				theme: localStorage.theme || 'system',
@@ -32,9 +32,8 @@ import { Icon } from "astro-icon/components";
 		id="theme-selector"
 		class="appearance-none cursor-pointer rounded-md pl-3 pr-2 py-1.5 dark:bg-stone-950 dark:text-white focus-visible:outline-none"
 		x-model="theme"
-		aria-label="Choose a theme"
+		aria-label="Elige el tema"
 		@change="switchTheme($event.target.value)">
-		<option value="system">System</option>
 		<option value="dark">Dark</option>
 		<option value="light">Light</option>
 	</select>
