--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,9 +4,6 @@ import { pwaInfo } from "virtual:pwa-info";
 import Footer from "@components/footer.astro";
 import Navbar from "@components/navbar/navbar.astro";
 import "@fontsource-variable/inter";
-import { HeadHrefLangs } from "astro-i18next/components";
-import { SEO } from "astro-seo";
-import i18next from "i18next";
 
 export interface Props {
 	title?: string;
@@ -15,34 +12,27 @@ export interface Props {
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site).toString();
 
-const resolvedImageWithDomain = new URL(
-	"/meta/opengraph.png",
-	Astro.site,
-).toString();
+
 
 const { title, lang = null } = Astro.props;
 
 const makeTitle = title
-	? `${title} | Astros`
-	: "Astros - Starter Template for Astro with Tailwind CSS";
 ---
 
 <!doctype html>
-<html lang={lang ?? i18next.language}>
+<html lang="es">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<meta name="theme-color" content="#ffffff" />
-		<HeadHrefLangs />
-
 		<ViewTransitions />
 
 		<!-- Global CSS -->
 		<link rel="stylesheet" href="/index.css" />
 
-		<SEO
+		<!-- <SEO
 			title={makeTitle}
 			description="Astros is a starter website template for Astro built with TailwindCSS and alpine js."
 			canonical={canonicalURL}
@@ -57,7 +47,7 @@ const makeTitle = title
 					alt: "Astros Homepage Screenshot",
 				},
 			}}
-		/>
+		/> -->
 
 		<script is:inline>
 			function handleThemeChange() {
@@ -78,10 +68,8 @@ const makeTitle = title
 	<body class="dark:bg-stone-950">
 		<Navbar />
 		<slot />
-		<Footer />
+		<Footer >
 		<style is:global>
-			/* Improve Page speed */
-			/* https://css-tricks.com/almanac/properties/c/content-visibility/ */
 			img {
 				content-visibility: auto;
 			}
