--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,9 +1,6 @@
 ---
 import Layout from "@layouts/Layout.astro";
 import { localizePath } from "astro-i18next";
-import { changeLanguage } from "i18next";
-
-changeLanguage("en");
 
 const title = "Error 404";
 ---
@@ -13,12 +10,12 @@ const title = "Error 404";
 		<div class="container flex flex-col items-center justify-center px-5 mx-auto my-8">
 			<div class="max-w-md text-center">
 				<h2 class="mb-8 font-bold text-9xl">
-					<span class="sr-only">Error</span>
-					<span class="text-primary">404</span>
+					<span class="sr-only dark:text-slate-400">Error</span>
+					<span class="text-primary dark:text-slate-400">404</span>
 				</h2>
-				<p class="text-3xl font-semibold md:text-3xl">Sorry, we couldn't find this page.</p>
-				<p class="mt-4 mb-8 text-lg text-muted dark:text-slate-400">But dont worry, you can find plenty of other things on our homepage.</p>
-				<a rel="noopener noreferrer" href={localizePath("/")} class="btn ml-4">Back to homepage</a>
+				<p class=" dark:text-slate-400 text-3xl font-semibold md:text-3xl ">Lo sentimos, no pudimos encontrar esta página.</p>
+				<p class="mt-4 mb-8 text-lg text-muted dark:text-slate-400">Pero no te preocupes, puedes encontrar muchas otras cosas en nuestra página principal.</p>
+				<a rel="noopener noreferrer" href={localizePath("/")} class="btn ml-4  dark:text-slate-100">Volver a la página principal</a>
 			</div>
 		</div>
 	</section>
