Update layout component to set title and language for the 2025 season

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import Container from "@components/container.astro";
 import Hero from "@components/hero.astro";
 import Layout from "@layouts/Layout.astro";
 ---
-<Layout>
+<Layout title="Temporada 2025" lang="es">
 	<Container>
 		<Hero />
 	</Container>
