Enhance hero and globe components with React support and layout adjustments

--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -40,7 +40,7 @@ import Cobe from "@components/cobe.astro";
           {"Circuitos de la temporada 2025"}
         </h1>
       </div>
-      <div class="flex justify-center items-center mt-4 md:mt-8">
+      <div class="flex flex-col justify-center items-center mt-4 md:mt-8">
         <Cobe />
       </div>
     </div>
