--- a/src/components/cobe.astro
+++ b/src/components/cobe.astro
@@ -1,7 +1,9 @@
 ---
 const globeMaxSize = 500;
 ---
-
+<h2>
+<span class="text-primary dark:text-slate-400">Nombre</span>
+</h2>
 <canvas id="cobe" width={globeMaxSize} height={globeMaxSize} class="dark:opacity-100"></canvas>
 
 <script define:vars={{ globeMaxSize }} type="module">
@@ -18,6 +20,33 @@ const globeMaxSize = 500;
 	let currentTheta = 0;
 	const doublePi = Math.PI * 2;
 	const focusRef = { current: [0, 0] };
+	
+	//Nombres:
+			// Albert Park, Melbourne
+			// Shanghái
+			// Suzuka
+			// Sakhir
+			// Yeda
+			// Miami Gardens
+			// Imola
+			// Montecarlo
+			// Montmeló
+			// Montreal
+			// Spielberg
+			// Silverstone
+			// Spa-Francorchamps
+			// Mogyoród
+			// Zandvoort
+			// Monza
+			// Bakú
+			// Marina Bay
+			// Austin
+			// Ciudad de México
+			// Interlagos
+			// Las Vegas
+			// Lusail
+			// Yas Marina
+
 	const markers = [
 		{ location: [-37.8497, 144.9680], size: 0.05 },
 		{ location: [31.3389, 121.2220], size: 0.05 },
@@ -71,9 +100,9 @@ const globeMaxSize = 500;
 			mapBrightness: 12,
 			baseColor: [0.3, 0.3, 0.3],
 			markerColor: [1, 0.1, 0],
-			glowColor: [1, 0.1, 0],
+			glowColor: [0, 0.5, 1],
 			offset: [0, 0],
-			opacity: 0.5,
+			opacity: 1,
 			markers: markers,
 			onRender: (state) => {
 				state.phi = currentPhi;
@@ -104,10 +133,10 @@ const globeMaxSize = 500;
 		currentMarkerIndex = (currentMarkerIndex + 1) % markers.length;
 	}, 3000);
 
-	// Update the globe dimensions when the window is resized
-	window.addEventListener("resize", () => {
-		let globeSize = computeGlobeSize(globeMaxSize);
-		canvas.width = globeSize;
-		canvas.height = globeSize;
-	});
+	// // Update the globe dimensions when the window is resized
+	// window.addEventListener("resize", () => {
+	// 	let globeSize = computeGlobeSize(globeMaxSize);
+	// 	canvas.width = globeSize;
+	// 	canvas.height = globeSize;
+	// });
 </script>
