--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -1,5 +1,4 @@
 ---
-import { useState, useEffect } from 'react';
 import Cobe from "@components/cobe.astro";
 ---
 
@@ -87,7 +86,7 @@ import Cobe from "@components/cobe.astro";
     </svg>
   </div>
 	<div class="flex justify-center items-center mt-4 md:mt-8">
-	<table class="table-auto border-collapse border  dark:text-slate-400 border-gray-400 mt-8">
+	<table class="table-auto border-collapse border  dark:text-white border-gray-400 mt-8">
 		<thead>
 			<tr>
 				<th class="border border-gray-300 px-4 py-2">N.º</th>
