--- a/src/components/cobe.astro
+++ b/src/components/cobe.astro
@@ -2,7 +2,7 @@
 const globeMaxSize = 500;
 ---
 <h2>
-	<span id="nombre" class="dark:text-white"></span>
+	<span id="nombre" class="dark:text-blue-400"></span>
 </h2>
 <canvas id="cobe" width={globeMaxSize} height={globeMaxSize} class="dark:opacity-100"></canvas>
 
@@ -34,16 +34,16 @@ const globeMaxSize = 500;
 		{ location: [45.5005, -73.5221], size: 0.05, name: "Gran Premio de Canadá, Circuito Gilles Villeneuve Montreal, 13 al 15 de junio", endDate: new Date("2025-06-15") },
 		{ location: [47.2197, 14.7647], size: 0.05, name: "Gran Premio de Austria, Red Bull Ring Spielberg, 27 al 29 de junio", endDate: new Date("2025-06-29") },
 		{ location: [52.0786, -1.0169], size: 0.05, name: "Gran Premio de Gran Bretaña, Circuito de Silverstone, 4 al 6 de julio", endDate: new Date("2025-07-06") },
-		{ location: [50.4372, 5.9714], size: 0.05, name: "Gran Premio de Bélgica, Circuito de Spa-Francorchamps, 1 al 3 de agosto", endDate: new Date("2025-08-03") },
-		{ location: [47.5789, 19.2486], size: 0.05, name: "Gran Premio de Hungría, Hungaroring, 18 al 20 de julio", endDate: new Date("2025-07-20") },
-		{ location: [52.3888, 4.5409], size: 0.05, name: "Gran Premio de los Países Bajos, Circuito de Zandvoort, 22 al 24 de agosto", endDate: new Date("2025-08-24") },
+		{ location: [50.4372, 5.9714], size: 0.05, name: "Gran Premio de Bélgica, Circuito de Spa-Francorchamps, 25 al 27 de julio", endDate: new Date("2025-07-27") },
+		{ location: [47.5789, 19.2486], size: 0.05, name: "Gran Premio de Hungría, Hungaroring, 01 al 03 de agosto", endDate: new Date("2025-08-03") },
+		{ location: [52.3888, 4.5409], size: 0.05, name: "Gran Premio de los Países Bajos, Circuito de Zandvoort, 29 al 31 de agosto", endDate: new Date("2025-08-31") },
 		{ location: [45.6156, 9.2811], size: 0.05, name: "Gran Premio de Italia, Autodromo Nazionale di Monza, 5 al 7 de septiembre", endDate: new Date("2025-09-07") },
 		{ location: [40.3725, 49.8533], size: 0.05, name: "Gran Premio de Azerbaiyán, Circuito de Bakú, 19 al 21 de septiembre", endDate: new Date("2025-09-21") },
 		{ location: [1.2914, 103.8644], size: 0.05, name: "Gran Premio de Singapur, Circuito de Marina Bay, 3 al 5 de octubre", endDate: new Date("2025-10-05") },
 		{ location: [30.1328, -97.6411], size: 0.05, name: "Gran Premio de Estados Unidos, Circuito de las Américas, 17 al 19 de octubre", endDate: new Date("2025-10-19") },
 		{ location: [19.4042, -99.0907], size: 0.05, name: "Gran Premio de México, Autódromo Hermanos Rodríguez, 24 al 26 de octubre", endDate: new Date("2025-10-26") },
 		{ location: [-23.7036, -46.6997], size: 0.05, name: "Gran Premio de São Paulo, Autódromo José Carlos Pace, 7 al 9 de noviembre", endDate: new Date("2025-11-09") },
-		{ location: [36.1147, -115.1698], size: 0.05, name: "Gran Premio de Las Vegas, Circuito de Las Vegas, 21 al 23 de noviembre", endDate: new Date("2025-11-23") },
+		{ location: [36.1147, -115.1698], size: 0.05, name: "Gran Premio de Las Vegas, Circuito de Las Vegas, 20 al 22 de noviembre", endDate: new Date("2025-11-22") },
 		{ location: [25.4903, 51.4542], size: 0.05, name: "Gran Premio de Catar, Circuito Internacional de Losail, 28 al 30 de noviembre", endDate: new Date("2025-11-30") },
 		{ location: [24.4672, 54.6031], size: 0.05, name: "Gran Premio de Abu Dabi, Circuito Yas Marina, 5 al 7 de diciembre", endDate: new Date("2025-12-07") }
 	];
@@ -96,10 +96,9 @@ const globeMaxSize = 500;
 				currentTheta = currentTheta * 0.92 + focusTheta * 0.08;
 				state.width = globeSize;
 				state.height = globeSize;
-				// state.markers = markers.map(marker => ({
-				// 	...marker,
-					
-				// })); 
+				state.markers = markers.map(marker => ({
+					...marker,
+				})); 
 			},
 		});
 
